--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Todo App</title>
     <link 
-      href='https://fonts.googleapis.com/css?family=Lato:300,400,700' 
-      rel='stylesheet'
+      href="https://fonts.googleapis.com/css?family=Lato:300,400,700" 
+      rel="stylesheet"
     >
     <link 
       rel="stylesheet" 
@@ -17,7 +17,7 @@
     <div class="header">
       <img src="./eisenhower-matrix.jpg" class="eisenhower-matrix">
       <a 
-        class='more-inf' 
+        class="more-inf"
         href="https://goal-life.com/page/method/matrix-eisenhower"
       >
         Want more details?
@@ -27,14 +27,14 @@
       <p>
         <label for="new-task">Add Item</label>
         <div class="task-wrapper">
-          <input id='new-task' class="task" type="text">
+          <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
       </p>
       <h3 class="title">Todo</h3>
-      <ul id='incomplete-tasks' class="list">
+      <ul id="incomplete-tasks" class="list">
         <li class="item">
-          <input type='checkbox'>
+          <input type="checkbox">
           <label class="task">Pay Bills</label>
           <input type="text" class="task">
           <button class="edit">Edit</button>
@@ -46,7 +46,7 @@
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
-          <button class='edit'>Save</button>
+          <button class="edit">Save</button>
           <button class="delete">
             <img src="./remove.svg">
           </button>
