--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="header">
-      <img src="./eisenhower-matrix.jpg" class="eisenhower-matrix">
+      <img src="./eisenhower-matrix.jpg" class="eisenhower-matrix" alt="eisenhower-matrix">
       <a 
         class="more-inf"
         href="https://goal-life.com/page/method/matrix-eisenhower"
@@ -39,7 +39,7 @@
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="remove picture">
           </button>
         </li>
         <li class="item edit-mode">
@@ -48,7 +48,7 @@
           <input type="text" value="Go Shopping" class="task">
           <button class="edit">Save</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="remove picture">
           </button>
         </li>
       </ul>
@@ -60,7 +60,7 @@
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="remove picture">
           </button>
         </li>
       </ul>
